--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BD_Avtorizatsia</string>
+    <string name="buy">Корзина</string>
+    <string name="button_buy">Купить товар</string>
+    <string name="list_flights">Список товаров</string>
+    <string name="etPrice">Товар</string>
+    <string name="quantity">Кол-во</string>
 </resources>
